# elasticlient

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Readme.md  annotated.html  bulk_8h.html  bulk_8h__incl.map  bulk_8h__incl.md5  bulk_8h_source.html  classelasticlient_1_1Bulk-members.html  classelasticlient_1_1Bulk.html  classelasticlient_1_1Client-members.html  classelasticlient_1_1Client.html  classelasticlient_1_1ConnectionException-members.html  classelasticlient_1_1ConnectionException.html  classelasticlient_1_1ConnectionException__coll__graph.map  classelasticlient_1_1ConnectionException__inherit__graph.map  classelasticlient_1_1ConnectionException__inherit__graph.md5  classelasticlient_1_1IBulkData-members.html  classelasticlient_1_1IBulkData.html  classelasticlient_1_1IBulkData__inherit__graph.map  classelasticlient_1_1IBulkData__inherit__graph.md5  classelasticlient_1_1SameIndexBulkData-members.html  classelasticlient_1_1SameIndexBulkData.html  classelasticlient_1_1SameIndexBulkData__coll__graph.map  classelasticlient_1_1SameIndexBulkData__coll__graph.md5  classelasticlient_1_1SameIndexBulkData__inherit__graph.md5  classelasticlient_1_1Scroll-members.html  classelasticlient_1_1Scroll.html  classelasticlient_1_1ScrollByScan-members.html  classelasticlient_1_1ScrollByScan.html  classelasticlient_1_1ScrollByScan__coll__graph.map  classelasticlient_1_1ScrollByScan__coll__graph.md5  classelasticlient_1_1ScrollByScan__inherit__graph.map  classelasticlient_1_1ScrollByScan__inherit__graph.md5  classelasticlient_1_1Scroll__inherit__graph.map  classelasticlient_1_1Scroll__inherit__graph.md5  classes.html  client_8h.html  (+106 more)
.github/workflows/: cmake.yml  doc.yaml
cmake/: ElasticlientConfig-version.cmake.in  ElasticlientConfig.cmake.in
cmake/Modules/: FindCPR.cmake  FindHTTPMockServer.cmake
doc/: Doxyfile  main.dox
example/: CMakeLists.txt  hello-world.cc  initializations.cc
include/elasticlient/: bulk.h  client.h  logging.h  scroll-parser.h  scroll.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+11 more)
src/: CMakeLists.txt  bulk-impl.h  bulk.cc  client-impl.h  client.cc  logging-impl.h  logging.cc  scroll-impl.h  scroll.cc
test/: CMakeLists.txt  tests-elasticlient.cc
